--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-
-﻿streamlit==1.10.0
-streamlit==1.10.0
-tensorflow==2.10.0
-opencv-python-headless==4.6.0.66
-numpy==1.23.0
+streamlit
+numpy
+pandas
+matplotlib
+tensorflow
